--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang = "en">
 <head>
     <meta charset = "UTF-8">
-    <title>Title</title>
+    <title>Webpack + React</title>
 </head>
 <body>
-
+<div id="app"></div>
+    <script src="build/app.bundle.js"></script>
 </body>
 </html>
